# ddnet-authservice

./: .env.example  Cargo.toml  README.md  config.toml.example
migrations/: 20210821092318_initial.sql
src/: db.rs  email.rs  errors.rs  main.rs  settings.rs
