[package]
name = "ddnet-authservice"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.1.3"
base64 = "0.13.0"
base64-serde = "0.6.1"
dotenv = "0.15.0"
ed25519-dalek = "1.0.1"
figment = { version = "0.10.6", features = ["toml"] }
lettre = { version = "0.10.0-rc.3", features = ["tokio1", "smtp-transport", "builder", "tokio1-rustls-tls"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
sqlx = { version = "0.5.7", features = ["runtime-tokio-rustls", "mysql", "migrate"] }
thiserror = "1.0.26"
tokio = { version = "1.10.0", features = ["full"] }
tower = { version = "0.4.8", features = ["full"] }
tower-http = { version = "0.1.1", features = ["full"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
